update item menu

--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
               <li><a href="#how-it-works" class="navbar-link page-scroll">How it works</a></li>
               <li><a href="#applications" class="navbar-link page-scroll">Applications</a></li>
               <li><a href="#features" class="navbar-link page-scroll">Features</a></li>
-              <li><a href="#team" class="navbar-link page-scroll">Team</a></li>
+              <li><a href="#team" class="navbar-link page-scroll">Team&amp;Advisors</a></li>
               <li><a href="#advisor" class="navbar-link page-scroll">Advisor</a></li>
-              <li><a href="#faq" class="navbar-link">Faq</a></li>
+              <li><a href="#faq" class="navbar-link">FAQ</a></li>
               <li><a href="#contact" class="navbar-link">Contact</a></li>
             </ul>
           </div><!-- /.navbar-collapse -->
@@ -198,8 +198,19 @@ justice.
         </div>
       </div>
 
-      <div class="row" >
+      <div class="row">
         <div class="col-md-3 col-md-offset-1">
+          <h3>Arbitration</h3>
+          <p>
+            A paperwork mistake causes a convoy of a freight cargo to be stuck at a port for 3 days, at a cost of several thousand dollars.
+
+            The jury determines that the mistake was made by the shipping company, which has to compensate the client.
+          </p>
+        </div>
+        <div class="col-md-2">
+          <img src="img/arbitration.png" class="app-icon" />
+        </div>
+        <div class="col-md-3">
           <h3>Crowdfunding</h3>
           <p>
             Crowdfunding
@@ -214,8 +225,15 @@ justice.
         <div class="col-md-2">
           <img class="app-icon" src="img/crowdfunding.png" />
         </div>
-
-        <div class="col-md-3">
+      </div>
+      <div class="row" >
+        <div class="col-md-4 col-md-offset-1 rect">
+        </div>
+        <div class="col-md-4 col-md-offset-1 rect">
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-3 col-md-offset-1">
           <h3>Copyright</h3>
           <p>
             A band uploads a song on a decentralized music platform. A user flags the song for plagiarism. Kleroterion jury determines that the song was indeed plagiarized.
@@ -225,25 +243,6 @@ justice.
         </div>
         <div class="col-md-2">
           <img src="img/copyright.png" class="app-icon" />
-        </div>
-      </div>
-      <div class="row" >
-        <div class="col-md-4 col-md-offset-1 rect">
-        </div>
-        <div class="col-md-4 col-md-offset-1 rect">
-        </div>
-      </div>
-      <div class="row" >
-        <div class="col-md-3 col-md-offset-1">
-          <h3>Arbitration</h3>
-          <p>
-            A paperwork mistake causes a convoy of a freight cargo to be stuck at a port for 3 days, at a cost of several thousand dollars.
-
-            The jury determines that the mistake was made by the shipping company, which has to compensate the client.
-          </p>
-        </div>
-        <div class="col-md-2">
-          <img src="img/arbitration.png" class="app-icon" />
         </div>
         <div class="col-md-3">
           <h3>Social media</h3>
