add form contact

--- a/index.html
+++ b/index.html
@@ -40,9 +40,8 @@
               <li><a href="#applications" class="navbar-link page-scroll">Applications</a></li>
               <li><a href="#features" class="navbar-link page-scroll">Features</a></li>
               <li><a href="#team" class="navbar-link page-scroll">Team&amp;Advisors</a></li>
-              <li><a href="#advisor" class="navbar-link page-scroll">Advisor</a></li>
-              <li><a href="#faq" class="navbar-link">FAQ</a></li>
-              <li><a href="#contact" class="navbar-link">Contact</a></li>
+              <li><a href="#faq" class="navbar-link page-scroll">FAQ</a></li>
+              <li><a href="#contact" class="navbar-link page-scroll">Contact</a></li>
             </ul>
           </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
@@ -302,7 +301,7 @@ justice.
           <h3>Contact us</h3>
         </div>
       </div>
-      <div class="row" >
+      <div class="row">
         <div class="col-md-11 col-md-offset-1">
           <h2 class="advisors-title-section">ADVISORS</h2>
         </div>
@@ -459,9 +458,25 @@ justice.
       </div>
     </section>
 
-
-
-    <section class="contact" id="contact"></section>
+    <section class="contact" id="contact">
+      <div class="row">
+        <div class="col-md-8 col-md-offset-1">
+          <h2 class="contact-title-section">STAY TUNED</h2>
+          <a href="https://kleroterion.herokuapp.com/">
+            <img class="slack-icon" width="100px" src="https://cdn.worldvectorlogo.com/logos/slack-1.svg" />
+          </a>
+          <a href="https://kleroterion.herokuapp.com/">
+            <img class="slack-icon" width="120px" src="http://www.freeiconspng.com/uploads/twitter-icon-download-18.png" />
+          </a>
+        </div>
+        <div class="col-md-2">
+          <h2 class="contact-title-section">CONTACT</h2>
+          <input type="text" class="form-control form-input" placeholder="Name">
+          <input type="text" class="form-control form-input" placeholder="Company">
+          <textarea class="form-control form-input" rows="3">Text</textarea>
+        </div>
+      </div>
+    </section>
 
     <footer class="pull-right">
       Kleroterion © 2017  info@wkleroterion.io
