add submit form

--- a/index.html
+++ b/index.html
@@ -471,9 +471,13 @@ justice.
         </div>
         <div class="col-md-3">
           <h2 class="contact-title-section">CONTACT</h2>
-          <input type="text" class="form-control form-input" placeholder="Name">
-          <input type="text" class="form-control form-input" placeholder="Company">
-          <textarea class="form-control form-input" rows="3">Text</textarea>
+          <form action="https://formspree.io/contact@kleroterion.io"
+      method="POST">
+            <input type="text" class="form-control form-input" placeholder="Name">
+            <input type="text" class="form-control form-input" placeholder="Company">
+            <textarea class="form-control form-input" rows="3">Text</textarea>
+            <input type="submit" class="submit pull-right" value="Submit">
+          </form>
         </div>
       </div>
     </section>
