--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@ justice.
     </section>
 
     <footer class="pull-right">
-      Kleroterion © 2017  info@wkleroterion.io
+      Kleroterion © 2017  info@kleroterion.io
     </footer>
 
     <script
