--- a/index.html
+++ b/index.html
@@ -114,10 +114,7 @@
           <img src="img/dispute.png" />
           <h3>Dispute</h3>
           <p>
-            A dispute arises,
-            and the relevant
-            information is sent
-            to Kleroterion
+            A dispute arises, and the relevant information is sent to Kleroterion
           </p>
         </div>
         <div class="col-md-2 text-center">
@@ -132,10 +129,7 @@
           <img src="img/decision.png" />
           <h3>Decision</h3>
           <p>
-            The decision
-            is enforced
-            by the smart
-            contract.
+            The decision is enforced by the smart contract.
           </p>
         </div>
       </div>
