--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         <div class="col-md-2 col-md-offset-2 text-center">
           <img src="img/contract.png" />
           <h3>Contract</h3>
-          <p>
+          <p class="how-it-works-text">
             Users create
             a smart contract and select Kleroterion
             as arbitration protocol
@@ -113,14 +113,14 @@
         <div class="col-md-2 text-center">
           <img src="img/dispute.png" />
           <h3>Dispute</h3>
-          <p>
+          <p class="how-it-works-text">
             A dispute arises, and the relevant information is sent to Kleroterion
           </p>
         </div>
         <div class="col-md-2 text-center">
           <img src="img/jury.png" />
           <h3>Jury</h3>
-          <p>
+          <p class="how-it-works-text">
             A jury is drawn
             from the crowd. Jurors evaluate evidence and vote a decision.
           </p>
@@ -128,7 +128,7 @@
         <div class="col-md-2 text-center">
           <img src="img/decision.png" />
           <h3>Decision</h3>
-          <p>
+          <p class="how-it-works-text">
             The decision is enforced by the smart contract.
           </p>
         </div>
@@ -271,7 +271,7 @@ justice.
       <div class="row" >
         <div class="col-md-2 col-md-offset-1">
           <img src="img/federico_ast.png" />
-          <h3>Frederico Ast</h3>
+          <h3>Federico Ast</h3>
           <p>
             CEO
           </p>
@@ -291,7 +291,10 @@ justice.
           </p>
         </div>
         <div class="col-md-2 col-md-offset-1">
-          <img src="img/anonymous.png" />
+          <img src="img/anonymous_rh.png" />
+          <p class="contributor">
+            Want to contribute <br />to the justice revolution?
+          </p>
           <h3>Contact us</h3>
         </div>
       </div>
@@ -304,14 +307,6 @@ justice.
         <div class="col-md-2 col-md-offset-1">
           <img src="img/anonymous.png" />
           <h3>Ryan Zurrer</h3>
-        </div>
-        <div class="col-md-2 col-md-offset-1">
-          <img src="img/anonymous.png" />
-          <h3>Frederico Ast</h3>
-        </div>
-        <div class="col-md-2 col-md-offset-1">
-          <img src="img/anonymous.png" />
-          <h3>Frederico Ast</h3>
         </div>
       </div>
     </section>
