--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@ justice.
     <section class="features" id="features">
       <div class="row" >
         <div class="col-md-11 col-md-offset-1 app-border">
-          <h2 class="app-title-section">APP FEATURES</h2>
+          <h2 class="app-title-section">USES CASES</h2>
         </div>
       </div>
 
