--- a/index.html
+++ b/index.html
@@ -103,6 +103,26 @@
       <div class="row">
         <div class="col-md-2 col-md-offset-2 text-center">
           <img src="img/contract.png" />
+
+        </div>
+        <div class="col-md-2 text-center">
+          <img src="img/dispute.png" />
+
+
+        </div>
+        <div class="col-md-2 text-center">
+          <img src="img/jury.png" />
+
+
+        </div>
+        <div class="col-md-2 text-center">
+          <img src="img/decision.png" />
+
+
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-2 col-md-offset-2 text-center">
           <h3>Contract</h3>
           <p class="how-it-works-text">
             Users create
@@ -111,14 +131,12 @@
           </p>
         </div>
         <div class="col-md-2 text-center">
-          <img src="img/dispute.png" />
           <h3>Dispute</h3>
           <p class="how-it-works-text">
             A dispute arises, and the relevant information is sent to Kleroterion
           </p>
         </div>
         <div class="col-md-2 text-center">
-          <img src="img/jury.png" />
           <h3>Jury</h3>
           <p class="how-it-works-text">
             A jury is drawn
@@ -126,7 +144,6 @@
           </p>
         </div>
         <div class="col-md-2 text-center">
-          <img src="img/decision.png" />
           <h3>Decision</h3>
           <p class="how-it-works-text">
             The decision is enforced by the smart contract.
