add links linkedin

--- a/index.html
+++ b/index.html
@@ -54,18 +54,15 @@
         <div class="col-md-6 introduction-text bottom-align-text">
           <h2 class="title-protocol">Based on Ethereum <img class="logo-ethereum" src="img/ethereum_logo.png" /> Blockchain</h1>
           <h1 class="title">A JUSTICE SYSTEM<br />FOR THE INTERNET AGE</h1>
-
           <p class="top-description">
             A decentralized autonomous organization that delivers
             <br />
             fast, affordable and transparent justice for all.
           </p>
-
           <div class="top-call-to-action">
             <a type="button" class="btn btn-default btn-how-it-works page-scroll" href='#how-it-works'>How it works?</a>
             <a type="button" class="btn btn-default btn-how-it-wp" href='https://docs.google.com/document/d/1dpsSo833CpFfpnu_P9xsVJXi6b2DWHIKbNjCG63Zpg4/edit?usp=sharing'>Download the white paper</a>
           </div>
-
         </div>
       </div>
     </section>
@@ -103,22 +100,15 @@
       <div class="row">
         <div class="col-md-2 col-md-offset-2 text-center">
           <img src="img/contract.png" />
-
         </div>
         <div class="col-md-2 text-center">
           <img src="img/dispute.png" />
-
-
         </div>
         <div class="col-md-2 text-center">
           <img src="img/jury.png" />
-
-
         </div>
         <div class="col-md-2 text-center">
           <img src="img/decision.png" />
-
-
         </div>
       </div>
       <div class="row">
@@ -153,7 +143,6 @@
     </section>
 
     <section class="applications" id="applications">
-
       <div class="row" >
         <div class="col-md-5 col-md-offset-1">
                 <h2 class="applications-title-section">APPLICATIONS</h2>
@@ -192,7 +181,6 @@ justice.
         </p>
     </div>
     </section>
-
 
     <section class="features" id="features">
       <div class="row" >
@@ -290,7 +278,9 @@ justice.
           <img src="img/federico_ast.png" />
           <h3>Federico Ast</h3>
           <p>
-            CEO
+            CTO
+            <br />
+            <img src="http://7754.alserver2.com/userfiles/images/Social_Media_Buttons_LinkedIn.png" width="40px" style="position:relative; left:-5px; cursor:pointer;" onclick="location.href='https://www.linkedin.com/in/federicoast/'"/>
           </p>
         </div>
         <div class="col-md-2">
@@ -298,6 +288,8 @@ justice.
           <h3>Clément Lesaege</h3>
           <p>
             CTO
+            <br />
+            <img src="http://7754.alserver2.com/userfiles/images/Social_Media_Buttons_LinkedIn.png" width="40px" style="position:relative; left:-5px; cursor:pointer;" onclick="location.href='https://www.linkedin.com/in/cl%C3%A9ment-lesaege-a326b9ab/'"/>
           </p>
         </div>
         <div class="col-md-2">
@@ -305,6 +297,9 @@ justice.
           <h3>Nicolas Wagner</h3>
           <p>
             WEB3 DEVELOPER
+            <br />
+            <img src="http://7754.alserver2.com/userfiles/images/Social_Media_Buttons_LinkedIn.png" width="40px" style="position:relative; left:-5px; cursor:pointer;" onclick="location.href='https://www.linkedin.com/in/nicolas-wagner-ab59249a/'"/>
+            <img src="http://www.iconsdb.com/icons/preview/gray/github-9-xxl.png" width="33px" style="cursor:pointer;" onclick="location.href='https://github.com/n1c01a5'"/>
           </p>
         </div>
         <div class="col-md-2 col-md-offset-1">
@@ -471,8 +466,11 @@ justice.
           <a href="https://kleroterion.herokuapp.com/">
             <img class="slack-icon" width="100px" src="https://cdn.worldvectorlogo.com/logos/slack-1.svg" />
           </a>
-          <a href="https://kleroterion.herokuapp.com/">
+          <a href="https://twitter.com/federicoast">
             <img class="slack-icon" width="120px" src="http://www.freeiconspng.com/uploads/twitter-icon-download-18.png" />
+          </a>
+          <a href="https://www.facebook.com/kleroterion/">
+            <img class="slack-icon" width="115px" src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c2/F_icon.svg/2000px-F_icon.svg.png" />
           </a>
         </div>
         <div class="col-md-3">
@@ -488,7 +486,7 @@ justice.
       </div>
     </section>
 
-    <footer class="pull-right">
+    <footer>
       Kleroterion © 2017  info@kleroterion.io
     </footer>
 
