add link contact

--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@ justice.
           <img src="img/anonymous.png" style="clip: rect(0px,0px,200px,0px);"/>
           <h3>Nicolas Wagner</h3>
           <p>
-            WEB3 DEVELOPER
+            <span class="status">WEB3 DEVELOPER</span>
             <br />
             <img src="http://7754.alserver2.com/userfiles/images/Social_Media_Buttons_LinkedIn.png" width="40px" style="position:relative; left:-5px; cursor:pointer;" onclick="location.href='https://www.linkedin.com/in/nicolas-wagner-ab59249a/'"/>
             <img src="http://www.iconsdb.com/icons/preview/gray/github-9-xxl.png" width="33px" style="cursor:pointer;" onclick="location.href='https://github.com/n1c01a5'"/>
@@ -306,8 +306,9 @@ justice.
           <img src="img/anonymous_rh.png" />
           <p class="contributor">
             Want to contribute <br />to the justice revolution?
+            <br />
+            <a href="#contact" class="join-team-contact-us page-scroll">Contact us</a>
           </p>
-          <h3>Contact us</h3>
         </div>
       </div>
       <div class="row">
