--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@ justice.
           <img src="img/federico_ast.png" />
           <h3>Federico Ast</h3>
           <p>
-            CTO
+            <span class="status">CEO</span>
             <br />
             <img src="http://7754.alserver2.com/userfiles/images/Social_Media_Buttons_LinkedIn.png" width="40px" style="position:relative; left:-5px; cursor:pointer;" onclick="location.href='https://www.linkedin.com/in/federicoast/'"/>
           </p>
@@ -287,7 +287,7 @@ justice.
           <img src="img/lesaege.png" />
           <h3>Clément Lesaege</h3>
           <p>
-            CTO
+            <span class="status">CTO</span>
             <br />
             <img src="http://7754.alserver2.com/userfiles/images/Social_Media_Buttons_LinkedIn.png" width="40px" style="position:relative; left:-5px; cursor:pointer;" onclick="location.href='https://www.linkedin.com/in/cl%C3%A9ment-lesaege-a326b9ab/'"/>
           </p>
