--- a/index.html
+++ b/index.html
@@ -320,6 +320,20 @@ justice.
         <div class="col-md-2 col-md-offset-1">
           <img src="img/anonymous.png" />
           <h3>Ryan Zurrer</h3>
+          <p>
+            <span class="status">VENTURE PARTNER</span>
+            <br />
+            <img src="http://7754.alserver2.com/userfiles/images/Social_Media_Buttons_LinkedIn.png" width="40px" style="position:relative; left:-5px; cursor:pointer;" onclick="location.href='https://www.linkedin.com/in/ryan-zurrer-7a5a9a2/?ppe=1'"/>
+          </p>
+        </div>
+        <div class="col-md-2 col-md-offset-1">
+          <img src="img/anonymous.png" />
+          <h3>Alejandro Francetich</h3>
+          <p>
+            <span class="status">ECONOMIC ANALYSIS &amp; POLICY</span>
+            <br />
+            <img src="https://www.blulocks.com/assets/twitter-icon-2.png" width="33px" style="position:relative; left:-5px; cursor:pointer;" onclick="location.href='https://twitter.com/alefrancetich?lang=fr'"/>
+          </p>
         </div>
       </div>
     </section>
