add twitter links

--- a/index.html
+++ b/index.html
@@ -281,6 +281,7 @@ justice.
             <span class="status">CEO</span>
             <br />
             <img src="http://7754.alserver2.com/userfiles/images/Social_Media_Buttons_LinkedIn.png" width="40px" style="position:relative; left:-5px; cursor:pointer;" onclick="location.href='https://www.linkedin.com/in/federicoast/'"/>
+            <img src="https://www.blulocks.com/assets/twitter-icon-2.png" width="33px" style="cursor:pointer;" onclick="location.href='https://twitter.com/federicoast'"/>
           </p>
         </div>
         <div class="col-md-2">
@@ -290,6 +291,7 @@ justice.
             <span class="status">CTO</span>
             <br />
             <img src="http://7754.alserver2.com/userfiles/images/Social_Media_Buttons_LinkedIn.png" width="40px" style="position:relative; left:-5px; cursor:pointer;" onclick="location.href='https://www.linkedin.com/in/cl%C3%A9ment-lesaege-a326b9ab/'"/>
+            <img src="https://www.blulocks.com/assets/twitter-icon-2.png" width="33px" style="cursor:pointer;" onclick="location.href='https://twitter.com/clesaege'"/>
           </p>
         </div>
         <div class="col-md-2">
@@ -300,6 +302,7 @@ justice.
             <br />
             <img src="http://7754.alserver2.com/userfiles/images/Social_Media_Buttons_LinkedIn.png" width="40px" style="position:relative; left:-5px; cursor:pointer;" onclick="location.href='https://www.linkedin.com/in/nicolas-wagner-ab59249a/'"/>
             <img src="http://www.iconsdb.com/icons/preview/gray/github-9-xxl.png" width="33px" style="cursor:pointer;" onclick="location.href='https://github.com/n1c01a5'"/>
+            <img src="https://www.blulocks.com/assets/twitter-icon-2.png" width="40px" style="cursor:pointer; padding-left:7px;" onclick="location.href='https://twitter.com/w_n1c01a5'"/>
           </p>
         </div>
         <div class="col-md-2 col-md-offset-1">
