--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
           <h2 class="the-justice-protocol-title-section">THE JUSTICE<br /><span class="the-justice-protocol-subtitle">PROTOCOL</span></h2>
           <div class="row">
             <div class="col-md-9">
-              <p>The blockchain ushers a world of contracts enforced by code.</p>
-              <p>
+              <p class="the-justice-protocol-introduction">The blockchain ushers a world of contracts enforced by code.</p>
+              <p class="the-justice-protocol-inline">
                 Smart contracts are smart enough to self-execute as programmed,
                 but not to evaluate complex information or to render subjective
                 judgments.
