style kleroterion paragraph

--- a/index.html
+++ b/index.html
@@ -170,14 +170,22 @@ justice.
       </div>
       <div class="col-md-2">
         <p>
-          The kleroterion was
-          a randomization device
-          used by the Athenian polis
-          to select citizens to court juries.
+          <span class="the-justice-protocol-inline">
+            The kleroterion was
+            a randomization device
+            used by the Athenian polis
+            to select citizens to court juries.
+          </span>
+
+          <br />
+          <br />
 
           As stated in the smart contract, all revenue from the song is redirected to the original creator.
 
-          https://ru.wikipedia.org/wiki
+          <br />
+          <br />
+          
+          <a href="https://en.wikipedia.org/wiki/Kleroterion">https://en.wikipedia.org/wiki/Kleroterion</a>
         </p>
     </div>
     </section>
