update footer style

--- a/index.html
+++ b/index.html
@@ -513,7 +513,16 @@ justice.
     </section>
 
     <footer>
-      Kleroterion © 2017  info@kleroterion.io
+      <div class="row">
+        <div class="col-md-11">
+          <div class="pull-left">
+            <img src="img/logo_footer.png" style="display:inline;width:50px;"/>Kleroterion
+          </div>
+          <div class="pull-right">
+            Kleroterion © 2017  <a href="mailto:info@kleroterion.io" class="footer-mail-to">info@kleroterion.io</a>
+          </div>
+        </div>
+      </div>
     </footer>
 
     <script
