update font size h3

--- a/index.html
+++ b/index.html
@@ -284,6 +284,19 @@ justice.
       <div class="row" >
         <div class="col-md-2 col-md-offset-1">
           <img src="img/federico_ast.png" />
+        </div>
+        <div class="col-md-2">
+          <img src="img/lesaege.png" />
+        </div>
+        <div class="col-md-2">
+          <img src="img/anonymous.png" style="clip: rect(0px,0px,200px,0px);"/>
+        </div>
+        <div class="col-md-2 col-md-offset-1">
+          <img src="img/anonymous_rh.png" />
+        </div>
+      </div>
+      <div class="row" >
+        <div class="col-md-2 col-md-offset-1">
           <h3>Federico Ast</h3>
           <p>
             <span class="status">CEO</span>
@@ -293,7 +306,6 @@ justice.
           </p>
         </div>
         <div class="col-md-2">
-          <img src="img/lesaege.png" />
           <h3>Clément Lesaege</h3>
           <p>
             <span class="status">CTO</span>
@@ -303,7 +315,6 @@ justice.
           </p>
         </div>
         <div class="col-md-2">
-          <img src="img/anonymous.png" style="clip: rect(0px,0px,200px,0px);"/>
           <h3>Nicolas Wagner</h3>
           <p>
             <span class="status">WEB3 DEVELOPER</span>
@@ -314,7 +325,6 @@ justice.
           </p>
         </div>
         <div class="col-md-2 col-md-offset-1">
-          <img src="img/anonymous_rh.png" />
           <p class="contributor">
             Want to contribute <br />to the justice revolution?
             <br />
