--- a/index.html
+++ b/index.html
@@ -26,7 +26,11 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand page-scroll" href="#page-top"><img src="img/logo_kleroterion.png" class="navbar-logo"  />Kleroterion<sup class="introduction-sup">Alpha</sup></a>
+            <a class="navbar-brand page-scroll" href="#page-top">
+              <div>
+                <img src="img/logo_footer.png" class="navbar-logo"  />Kleroterion<sup class="introduction-sup">Alpha</sup>
+              </div>
+            </a>
           </div>
 
           <!-- Collect the nav links, forms, and other content for toggling -->
