--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@ justice.
     <section class="faq" id="faq">
       <div class="row" >
         <div class="col-md-10 col-md-offset-1">
-          <h2 class="faq-title-section">FRENQUENTLY ASKED QUESTION</h2>
+          <h2 class="faq-title-section">FREQUENTLY ASKED QUESTIONS</h2>
           <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
             <div class="panel panel-default">
               <div class="" role="tab" id="headingOne">
