add text advisors

--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@ justice.
             <span class="status">CTO</span>
             <br />
             <img src="http://7754.alserver2.com/userfiles/images/Social_Media_Buttons_LinkedIn.png" width="40px" style="position:relative; left:-5px; cursor:pointer;" onclick="location.href='https://www.linkedin.com/in/cl%C3%A9ment-lesaege-a326b9ab/'"/>
-            <img src="https://www.blulocks.com/assets/twitter-icon-2.png" width="33px" style="cursor:pointer;" onclick="location.href='https://twitter.com/clesaege'"/>
+            <img src="http://www.iconsdb.com/icons/preview/gray/github-9-xxl.png" width="33px" style="cursor:pointer;" onclick="location.href='https://github.com/clesaege'"/>
           </p>
         </div>
         <div class="col-md-2">
@@ -346,7 +346,13 @@ justice.
           <img src="img/anonymous.png" />
           <h3>Ryan Zurrer</h3>
           <p>
-            <span class="status">VENTURE PARTNER</span>
+            <span class="status">
+              VENTURE PARTNER
+              <br />
+              GENERAL PARTNER
+              <br />
+              AT POLYCHAIN
+            </span>
             <br />
             <img src="http://7754.alserver2.com/userfiles/images/Social_Media_Buttons_LinkedIn.png" width="40px" style="position:relative; left:-5px; cursor:pointer;" onclick="location.href='https://www.linkedin.com/in/ryan-zurrer-7a5a9a2/?ppe=1'"/>
           </p>
@@ -355,7 +361,7 @@ justice.
           <img src="img/anonymous.png" />
           <h3>Alejandro Francetich</h3>
           <p>
-            <span class="status">ECONOMIC ANALYSIS &amp; POLICY</span>
+            <span class="status">PHD IN GAME THEORY <br />AT STANFORD</span>
             <br />
             <img src="https://www.blulocks.com/assets/twitter-icon-2.png" width="33px" style="position:relative; left:-5px; cursor:pointer;" onclick="location.href='https://twitter.com/alefrancetich?lang=fr'"/>
           </p>
