add text kleroterion explain

--- a/index.html
+++ b/index.html
@@ -173,18 +173,15 @@ justice.
           <img src="img/kleroterion.png" />
       </div>
       <div class="col-md-2">
-        <p>
+        <p class="applications-kleroterion">
           <span class="the-justice-protocol-inline">
-            The kleroterion was
-            a randomization device
-            used by the Athenian polis
-            to select citizens to court juries.
+            The Kleroterion was an allotment machine used by the Athenian polis to select citizens to court juries.
           </span>
 
           <br />
           <br />
 
-          As stated in the smart contract, all revenue from the song is redirected to the original creator.
+          On trial days, citizen wishing to serve as jurors went to the courthouse and inserted their pinakion (a bronze ID token) into a slot of the Kleroterion. A justice official threw white and black dice on a tube attached on a side of the machine. Candidates having a black ball on their row were dismissed. Candidates with a white ball were selected for paid jury duty.
 
           <br />
           <br />
