add text kleroterion explain

--- a/index.html
+++ b/index.html
@@ -358,7 +358,11 @@ justice.
           <img src="img/anonymous.png" />
           <h3>Alejandro Francetich</h3>
           <p>
-            <span class="status">PHD IN GAME THEORY <br />AT STANFORD</span>
+            <span class="status">
+              ECONOMIC ANALYSIS &amp; POLICY
+              <br />
+              PHD IN GAME THEORY <br />AT STANFORD
+            </span>
             <br />
             <img src="https://www.blulocks.com/assets/twitter-icon-2.png" width="33px" style="position:relative; left:-5px; cursor:pointer;" onclick="location.href='https://twitter.com/alefrancetich?lang=fr'"/>
           </p>
