--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
               <li><a href="#protocol" class="navbar-link page-scroll">Protocol</a></li>
               <li><a href="#how-it-works" class="navbar-link page-scroll">How it works</a></li>
               <li><a href="#applications" class="navbar-link page-scroll">Applications</a></li>
-              <li><a href="#features" class="navbar-link page-scroll">Features</a></li>
+              <li><a href="#features" class="navbar-link page-scroll">Uses cases</a></li>
               <li><a href="#team" class="navbar-link page-scroll">Team&amp;Advisors</a></li>
               <li><a href="#faq" class="navbar-link page-scroll">FAQ</a></li>
               <li><a href="#contact" class="navbar-link page-scroll">Contact</a></li>
