add images team

--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@ justice.
           <img src="img/lesaege.png" />
         </div>
         <div class="col-md-2">
-          <img src="img/anonymous.png" style="clip: rect(0px,0px,200px,0px);"/>
+          <img src="img/nico.png" style="clip: rect(0px,0px,200px,0px);"/>
         </div>
         <div class="col-md-2 col-md-offset-1">
           <img src="img/anonymous_rh.png" />
@@ -355,7 +355,7 @@ justice.
           </p>
         </div>
         <div class="col-md-2 col-md-offset-1">
-          <img src="img/anonymous.png" />
+          <img src="img/alex.png" />
           <h3>Alejandro Francetich</h3>
           <p>
             <span class="status">
