add images team

--- a/index.html
+++ b/index.html
@@ -340,7 +340,14 @@ justice.
       </div>
       <div class="row" >
         <div class="col-md-2 col-md-offset-1">
-          <img src="img/anonymous.png" />
+          <img src="img/ryan.png" />
+        </div>
+        <div class="col-md-2 col-md-offset-1">
+          <img src="img/alex.png" />
+        </div>
+      </div>
+      <div class="row" >
+        <div class="col-md-2 col-md-offset-1">
           <h3>Ryan Zurrer</h3>
           <p>
             <span class="status">
@@ -355,7 +362,6 @@ justice.
           </p>
         </div>
         <div class="col-md-2 col-md-offset-1">
-          <img src="img/alex.png" />
           <h3>Alejandro Francetich</h3>
           <p>
             <span class="status">
