--- a/index.html
+++ b/index.html
@@ -302,8 +302,8 @@ justice.
           <p>
             <span class="status">CEO</span>
             <br />
-            <img src="http://7754.alserver2.com/userfiles/images/Social_Media_Buttons_LinkedIn.png" width="40px" style="position:relative; left:-5px; cursor:pointer;" onclick="location.href='https://www.linkedin.com/in/federicoast/'"/>
-            <img src="https://www.blulocks.com/assets/twitter-icon-2.png" width="33px" style="cursor:pointer;" onclick="location.href='https://twitter.com/federicoast'"/>
+            <img src="img/linkedIn_icon.png" width="40px" style="position:relative; left:-5px; cursor:pointer;" onclick="location.href='https://www.linkedin.com/in/federicoast/'"/>
+            <img src="img/twitter_icon.png" width="33px" style="cursor:pointer;" onclick="location.href='https://twitter.com/federicoast'"/>
           </p>
         </div>
         <div class="col-md-2">
@@ -311,8 +311,8 @@ justice.
           <p>
             <span class="status">CTO</span>
             <br />
-            <img src="http://7754.alserver2.com/userfiles/images/Social_Media_Buttons_LinkedIn.png" width="40px" style="position:relative; left:-5px; cursor:pointer;" onclick="location.href='https://www.linkedin.com/in/cl%C3%A9ment-lesaege-a326b9ab/'"/>
-            <img src="http://www.iconsdb.com/icons/preview/gray/github-9-xxl.png" width="33px" style="cursor:pointer;" onclick="location.href='https://github.com/clesaege'"/>
+            <img src="img/linkedIn_icon.png" width="40px" style="position:relative; left:-5px; cursor:pointer;" onclick="location.href='https://www.linkedin.com/in/cl%C3%A9ment-lesaege-a326b9ab/'"/>
+            <img src="img/github_icon.png" width="33px" style="cursor:pointer;" onclick="location.href='https://github.com/clesaege'"/>
           </p>
         </div>
         <div class="col-md-2">
@@ -320,9 +320,9 @@ justice.
           <p>
             <span class="status">WEB3 DEVELOPER</span>
             <br />
-            <img src="http://7754.alserver2.com/userfiles/images/Social_Media_Buttons_LinkedIn.png" width="40px" style="position:relative; left:-5px; cursor:pointer;" onclick="location.href='https://www.linkedin.com/in/nicolas-wagner-ab59249a/'"/>
-            <img src="http://www.iconsdb.com/icons/preview/gray/github-9-xxl.png" width="33px" style="cursor:pointer;" onclick="location.href='https://github.com/n1c01a5'"/>
-            <img src="https://www.blulocks.com/assets/twitter-icon-2.png" width="40px" style="cursor:pointer; padding-left:7px;" onclick="location.href='https://twitter.com/w_n1c01a5'"/>
+            <img src="img/linkedIn_icon.png" width="40px" style="position:relative; left:-5px; cursor:pointer;" onclick="location.href='https://www.linkedin.com/in/nicolas-wagner-ab59249a/'"/>
+            <img src="img/github_icon.png" width="33px" style="cursor:pointer;" onclick="location.href='https://github.com/n1c01a5'"/>
+            <img src="img/twitter_icon.png" width="40px" style="cursor:pointer; padding-left:7px;" onclick="location.href='https://twitter.com/w_n1c01a5'"/>
           </p>
         </div>
         <div class="col-md-2 col-md-offset-1">
@@ -358,7 +358,7 @@ justice.
               AT POLYCHAIN
             </span>
             <br />
-            <img src="http://7754.alserver2.com/userfiles/images/Social_Media_Buttons_LinkedIn.png" width="40px" style="position:relative; left:-5px; cursor:pointer;" onclick="location.href='https://www.linkedin.com/in/ryan-zurrer-7a5a9a2/?ppe=1'"/>
+            <img src="img/linkedIn_icon.png" width="40px" style="position:relative; left:-5px; cursor:pointer;" onclick="location.href='https://www.linkedin.com/in/ryan-zurrer-7a5a9a2/?ppe=1'"/>
           </p>
         </div>
         <div class="col-md-2 col-md-offset-1">
@@ -370,7 +370,7 @@ justice.
               PHD IN GAME THEORY <br />AT STANFORD
             </span>
             <br />
-            <img src="https://www.blulocks.com/assets/twitter-icon-2.png" width="33px" style="position:relative; left:-5px; cursor:pointer;" onclick="location.href='https://twitter.com/alefrancetich?lang=fr'"/>
+            <img src="img/twitter_icon.png" width="33px" style="position:relative; left:-5px; cursor:pointer;" onclick="location.href='https://twitter.com/alefrancetich?lang=fr'"/>
           </p>
         </div>
       </div>
