add email field in contact form

--- a/index.html
+++ b/index.html
@@ -532,6 +532,7 @@ justice.
       method="POST">
             <input type="text" class="form-control form-input" placeholder="Name">
             <input type="text" class="form-control form-input" placeholder="Company">
+            <input type="text" class="form-control form-input" placeholder="Email">
             <textarea class="form-control form-input" rows="3">Text</textarea>
             <input type="submit" class="submit pull-right" value="Submit">
           </form>
