add white paper

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           </p>
           <div class="top-call-to-action">
             <a type="button" class="btn btn-default btn-how-it-works page-scroll" href='#how-it-works'>How it works?</a>
-            <a type="button" class="btn btn-default btn-how-it-wp" href='https://docs.google.com/document/d/1dpsSo833CpFfpnu_P9xsVJXi6b2DWHIKbNjCG63Zpg4/edit?usp=sharing'>Download the white paper</a>
+            <a type="button" class="btn btn-default btn-how-it-wp" href='img/kleroterion-short-paper-v03.pdf'>Download the white paper</a>
           </div>
         </div>
       </div>
