fix contact form

--- a/index.html
+++ b/index.html
@@ -515,8 +515,8 @@ justice.
           <h2 class="contact-title-section">CONTACT</h2>
           <form action="https://formspree.io/contact@kleroterion.io"
       method="POST">
-            <input type="text" class="form-control form-input" placeholder="Name">
-            <input type="text" class="form-control form-input" placeholder="Company">
+            <input type="text" class="form-control form-input" name="name" placeholder="Name">
+            <input type="text" class="form-control form-input" name="company" placeholder="Company">
             <input type="text" class="form-control form-input" name="_replyto" placeholder="Email" />
             <textarea class="form-control form-input" rows="3">Text</textarea>
             <input type="hidden" name="_cc" value="wagner.nicolas1@gmail.com" />
