add placeholder in textarea

--- a/index.html
+++ b/index.html
@@ -518,7 +518,7 @@ justice.
             <input type="text" class="form-control form-input" name="name" placeholder="Name">
             <input type="text" class="form-control form-input" name="company" placeholder="Company">
             <input type="text" class="form-control form-input" name="_replyto" placeholder="Email" />
-            <textarea class="form-control form-input" name="content" rows="3">Text</textarea>
+            <textarea class="form-control form-input" name="content" rows="3" placeholder="Text"></textarea>
             <input type="hidden" name="_cc" value="wagner.nicolas1@gmail.com" />
             <input type="submit" class="submit pull-right" value="Submit">
           </form>
