change status advisor

--- a/index.html
+++ b/index.html
@@ -348,9 +348,7 @@ justice.
           <h3>Ryan Zurrer</h3>
           <p>
             <span class="status">
-              VENTURE PARTNER
-              <br />
-              GENERAL PARTNER
+              PRINCIPAL PARTNER
               <br />
               AT POLYCHAIN
             </span>
