change status advisor

--- a/index.html
+++ b/index.html
@@ -348,9 +348,9 @@ justice.
           <h3>Ryan Zurrer</h3>
           <p>
             <span class="status">
-              PRINCIPAL PARTNER
+              PRINCIPAL
               <br />
-              AT POLYCHAIN
+              POLYCHAIN CAPITAL
             </span>
             <br />
             <img src="img/linkedIn_icon.png" width="40px" style="position:relative; left:-5px; cursor:pointer;" onclick="location.href='https://www.linkedin.com/in/ryan-zurrer-7a5a9a2/?ppe=1'"/>
