--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@ justice.
               </div>
               <div id="collapseSeven" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingSeven">
                 <div class="panel-body">
-                  Kleroterion is a new research field in game theory, blockchain, collective intelligence and business. If you’re an academic wishing to study Kleroterion, please contact us.
+                  Kleroterion is a new research field in game theory, blockchain, collective intelligence and business. <a href="https://www.uwb.edu/business/faculty/afrancetich">Alejandro Francetich</a> is a leading scholar conducting research in the game theoretical aspects of the system. If you’re an academic wishing to study Kleroterion, please contact us.
                 </div>
               </div>
             </div>
