--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@ justice.
               </div>
               <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
                 <div class="panel-body">
-                  The Kleroterion protocol is especially suited for decisions that require a high level of transparency. An important use case involves arbitration. In this case, jurors have to analyze evidence and produce a verdict about which party is right in a dispute. Kleroterion is 100% voluntary and all parties have to opt-in (but they can do so before a dispute arises).
+                  The Kleroterion protocol is especially suited for decisions that require high transparency. An important application involves arbitration. In this case, jurors analyze evidence and vote which party is right in a dispute. Kleroterion is 100% voluntary and all parties have to opt-in before the dispute arises.
                 </div>
               </div>
             </div>
@@ -402,7 +402,7 @@ justice.
               </div>
               <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
                 <div class="panel-body">
-                  Kleroterion uses advanced concepts from game theory, collective intelligence, cryptography and blockchain to make sure that jurors have an incentive to make honest decisions without having to reveal their true identity. The incentive structure is based on a reputation token called pinakion that represents the right of users to be drawn as jurors. Users doing high quality work will earn money over time. Users doing poor quality work or trying to abuse the system will lose money. To learn more about how incentives work, read our white paper.
+                  Kleroterion uses advanced concepts from game theory, collective intelligence, cryptography and blockchain to make sure that jurors are properly selected and that they have an incentive to make honest decisions without having to reveal their true identity. The incentive structure is based on a reputation token called pinakion that represents the right of users to be drawn as jurors. Users doing high quality work will earn money over time. Users doing poor quality work or trying to abuse the system will lose money. To learn more about how incentives work, read our <a href="img/kleroterion-short-paper-v03.pdf">white paper</a>.
                 </div>
               </div>
             </div>
@@ -416,7 +416,7 @@ justice.
               </div>
               <div id="collapseFor" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFor">
                 <div class="panel-body">
-                  The number of jurors is decided by the parties when the contract is signed. If, after the decision, a party is not satisfied (maybe, because it thinks that jurors did not vote honestly), it can appeal and pay to have the decision made again. In the next round, a new decision will be made with double the amount of decision makers.
+                  The number of jurors is decided by the parties when the contract is signed. If a party is not satisfied with the verdict (maybe because it thinks that jurors did not vote honestly), it can appeal and pay to have the decision made again. In the next round, a new decision will be made with twice as many jurors.
                 </div>
               </div>
             </div>
@@ -444,7 +444,7 @@ justice.
               </div>
               <div id="collapseSix" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingSix">
                 <div class="panel-body">
-                  Absolutely. Please contact us to run a pilot.
+                  Absolutely. Please <a href="#contact">contact us</a> to run a pilot.
                 </div>
               </div>
             </div>
@@ -458,7 +458,7 @@ justice.
               </div>
               <div id="collapseSeven" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingSeven">
                 <div class="panel-body">
-                  Kleroterion is a new research field in game theory, blockchain, collective intelligence and business. <a href="https://www.uwb.edu/business/faculty/afrancetich">Alejandro Francetich</a> is a leading scholar conducting research in the game theoretical aspects of the system. If you’re an academic wishing to study Kleroterion, please contact us.
+                  Kleroterion is a new research field in game theory, blockchain, collective intelligence and business.If you’re an academic wishing to study Kleroterion, please <a href="#contact">contact us</a>.
                 </div>
               </div>
             </div>
@@ -472,7 +472,7 @@ justice.
               </div>
               <div id="collapseHeight" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingHeight">
                 <div class="panel-body">
-                  Kleroterion is an open source multipurpose decision-making protocol that can be used for making different kinds of decisions. If you’re a developer wanting to build on Kleroterion technology, please contact us.
+                  Kleroterion is an open source multipurpose decision-making protocol that can be used for making different kinds of decisions. If you’re a developer wanting to build on Kleroterion technology, please <a href="#contact">contact us</a>.
                 </div>
               </div>
             </div>
